Overflowing padding on social media icons fix

--- a/src/Social.css
+++ b/src/Social.css
@@ -14,7 +14,7 @@
     justify-content: center;
 }
 
-@media (max-width: 340px) {
+@media (max-width: 400px) {
     .fa {
         width: 20px;
         padding-left: 20px;
